--- a/book.bib
+++ b/book.bib
@@ -8,7 +8,7 @@
 @misc{hbr2012,
   year=2012,
   author="Harvard Business Review",
-  note="https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century"
+  title={"https://hbr.org/2012/10/data-scientist-the-sexiest-job-of-the-21st-century"}
 }
 
 @book{bruce2020practical,
